Parser/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    SELF

Grammar

Rule 0     S' -> program
Rule 1     program -> classes
Rule 2     classes -> class classes
Rule 3     classes -> class
Rule 4     class -> CLASS TYPE_ID INHERITS TYPE_ID LBRACE feature_list RBRACE SEMICOLON
Rule 5     feature_list -> feature SEMICOLON feature_list
Rule 6     feature_list -> feature
Rule 7     feature_list -> empty
Rule 8     feature -> ID LPAREN formal_list RPAREN COLON TYPE_ID LBRACE expression RBRACE
Rule 9     feature -> ID COLON TYPE_ID LBRACKET ASSIGN expression RBRACKET
Rule 10    formal_list -> formalParam COMMA formal_list
Rule 11    formal_list -> formalParam
Rule 12    formal_list -> empty
Rule 13    formalParam -> ID COLON TYPE_ID
Rule 14    expression -> ID ASSIGN expression
Rule 15    expression -> expression DOT ID LPAREN expression_list RPAREN
Rule 16    expression -> expression ALT expression DOT ID LPAREN expression_list RPAREN
Rule 17    expression_list -> expression COMMA expression_list
Rule 18    expression_list -> expression
Rule 19    expression_list -> empty
Rule 20    expression -> ID LPAREN expression expression_list RPAREN
Rule 21    expression -> IF expression THEN expression ELSE expression FI
Rule 22    expression -> WHILE expression LOOP expression POOL
Rule 23    expression -> LBRACE expression SEMICOLON expression_list RBRACE
Rule 24    expression_let_var_decl_list -> expression_let_var_decl_list expression_let_var_decl
Rule 25    expression_let_var_decl_list -> expression_let_var_decl_list
Rule 26    expression_let_var_decl_list -> empty
Rule 27    expression_let_var_decl -> ID COLON TYPE_ID ASSIGN expression
Rule 28    expression_let_var_decl -> ID COLON TYPE_ID
Rule 29    expression -> LET expression_let_var_decl expression_let_var_decl_list IN expression
Rule 30    expression -> CASE expression OF case_action case_action_list ESAC
Rule 31    case_action_list -> case_action_list case_action
Rule 32    case_action_list -> case_action_list
Rule 33    case_action_list -> empty
Rule 34    case_action -> ID COLON TYPE_ID ARROW expression SEMICOLON
Rule 35    expression -> NEW TYPE_ID
Rule 36    expression -> ISVOID expression
Rule 37    expression -> expression PLUS expression
Rule 38    expression -> expression MINUS expression
Rule 39    expression -> expression MULTIPLY expression
Rule 40    expression -> expression DIVIDE expression
Rule 41    expression -> expression LESSTHAN expression
Rule 42    expression -> expression LESSEQ expression
Rule 43    expression -> expression EQUAL expression
Rule 44    expression -> expression GREATERTHAN expression
Rule 45    expression -> expression GREATEREQ expression
Rule 46    expression -> LPAREN expression RPAREN
Rule 47    expression -> NOT expression
Rule 48    expression -> INTEGER
Rule 49    expression -> STRING
Rule 50    expression -> BOOLEAN
Rule 51    empty -> <empty>

Terminals, with rules where they appear

ALT                  : 16
ARROW                : 34
ASSIGN               : 9 14 27
BOOLEAN              : 50
CASE                 : 30
CLASS                : 4
COLON                : 8 9 13 27 28 34
COMMA                : 10 17
DIVIDE               : 40
DOT                  : 15 16
ELSE                 : 21
EQUAL                : 43
ESAC                 : 30
FI                   : 21
GREATEREQ            : 45
GREATERTHAN          : 44
ID                   : 8 9 13 14 15 16 20 27 28 34
IF                   : 21
IN                   : 29
INHERITS             : 4
INTEGER              : 48
ISVOID               : 36
LBRACE               : 4 8 23
LBRACKET             : 9
LESSEQ               : 42
LESSTHAN             : 41
LET                  : 29
LOOP                 : 22
LPAREN               : 8 15 16 20 46
MINUS                : 38
MULTIPLY             : 39
NEW                  : 35
NOT                  : 47
OF                   : 30
PLUS                 : 37
POOL                 : 22
RBRACE               : 4 8 23
RBRACKET             : 9
RPAREN               : 8 15 16 20 46
SELF                 : 
SEMICOLON            : 4 5 23 34
STRING               : 49
THEN                 : 21
TYPE_ID              : 4 4 8 9 13 27 28 34 35
WHILE                : 22
error                : 

Nonterminals, with rules where they appear

case_action          : 30 31
case_action_list     : 30 31 32
class                : 2 3
classes              : 1 2
empty                : 7 12 19 26 33
expression           : 8 9 14 15 16 16 17 18 20 21 21 21 22 22 23 27 29 30 34 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47
expression_let_var_decl : 24 29
expression_let_var_decl_list : 24 25 29
expression_list      : 15 16 17 20 23
feature              : 5 6
feature_list         : 4 5
formalParam          : 10 11
formal_list          : 8 10
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classes
    (2) classes -> . class classes
    (3) classes -> . class
    (4) class -> . CLASS TYPE_ID INHERITS TYPE_ID LBRACE feature_list RBRACE SEMICOLON

    CLASS           shift and go to state 3

    class                          shift and go to state 4
    program                        shift and go to state 1
    classes                        shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> classes .

    $end            reduce using rule 1 (program -> classes .)


state 3

    (4) class -> CLASS . TYPE_ID INHERITS TYPE_ID LBRACE feature_list RBRACE SEMICOLON

    TYPE_ID         shift and go to state 5


state 4

    (2) classes -> class . classes
    (3) classes -> class .
    (2) classes -> . class classes
    (3) classes -> . class
    (4) class -> . CLASS TYPE_ID INHERITS TYPE_ID LBRACE feature_list RBRACE SEMICOLON

    $end            reduce using rule 3 (classes -> class .)
    CLASS           shift and go to state 3

    class                          shift and go to state 4
    classes                        shift and go to state 6

state 5

    (4) class -> CLASS TYPE_ID . INHERITS TYPE_ID LBRACE feature_list RBRACE SEMICOLON

    INHERITS        shift and go to state 7


state 6

    (2) classes -> class classes .

    $end            reduce using rule 2 (classes -> class classes .)


state 7

    (4) class -> CLASS TYPE_ID INHERITS . TYPE_ID LBRACE feature_list RBRACE SEMICOLON

    TYPE_ID         shift and go to state 8


state 8

    (4) class -> CLASS TYPE_ID INHERITS TYPE_ID . LBRACE feature_list RBRACE SEMICOLON

    LBRACE          shift and go to state 9


state 9

    (4) class -> CLASS TYPE_ID INHERITS TYPE_ID LBRACE . feature_list RBRACE SEMICOLON
    (5) feature_list -> . feature SEMICOLON feature_list
    (6) feature_list -> . feature
    (7) feature_list -> . empty
    (8) feature -> . ID LPAREN formal_list RPAREN COLON TYPE_ID LBRACE expression RBRACE
    (9) feature -> . ID COLON TYPE_ID LBRACKET ASSIGN expression RBRACKET
    (51) empty -> .

    ID              shift and go to state 13
    RBRACE          reduce using rule 51 (empty -> .)

    feature_list                   shift and go to state 10
    feature                        shift and go to state 11
    empty                          shift and go to state 12

state 10

    (4) class -> CLASS TYPE_ID INHERITS TYPE_ID LBRACE feature_list . RBRACE SEMICOLON

    RBRACE          shift and go to state 14


state 11

    (5) feature_list -> feature . SEMICOLON feature_list
    (6) feature_list -> feature .

    SEMICOLON       shift and go to state 15
    RBRACE          reduce using rule 6 (feature_list -> feature .)


state 12

    (7) feature_list -> empty .

    RBRACE          reduce using rule 7 (feature_list -> empty .)


state 13

    (8) feature -> ID . LPAREN formal_list RPAREN COLON TYPE_ID LBRACE expression RBRACE
    (9) feature -> ID . COLON TYPE_ID LBRACKET ASSIGN expression RBRACKET

    LPAREN          shift and go to state 17
    COLON           shift and go to state 16


state 14

    (4) class -> CLASS TYPE_ID INHERITS TYPE_ID LBRACE feature_list RBRACE . SEMICOLON

    SEMICOLON       shift and go to state 18


state 15

    (5) feature_list -> feature SEMICOLON . feature_list
    (5) feature_list -> . feature SEMICOLON feature_list
    (6) feature_list -> . feature
    (7) feature_list -> . empty
    (8) feature -> . ID LPAREN formal_list RPAREN COLON TYPE_ID LBRACE expression RBRACE
    (9) feature -> . ID COLON TYPE_ID LBRACKET ASSIGN expression RBRACKET
    (51) empty -> .

    ID              shift and go to state 13
    RBRACE          reduce using rule 51 (empty -> .)

    feature_list                   shift and go to state 19
    feature                        shift and go to state 11
    empty                          shift and go to state 12

state 16

    (9) feature -> ID COLON . TYPE_ID LBRACKET ASSIGN expression RBRACKET

    TYPE_ID         shift and go to state 20


state 17

    (8) feature -> ID LPAREN . formal_list RPAREN COLON TYPE_ID LBRACE expression RBRACE
    (10) formal_list -> . formalParam COMMA formal_list
    (11) formal_list -> . formalParam
    (12) formal_list -> . empty
    (13) formalParam -> . ID COLON TYPE_ID
    (51) empty -> .

    ID              shift and go to state 23
    RPAREN          reduce using rule 51 (empty -> .)

    formalParam                    shift and go to state 24
    formal_list                    shift and go to state 21
    empty                          shift and go to state 22

state 18

    (4) class -> CLASS TYPE_ID INHERITS TYPE_ID LBRACE feature_list RBRACE SEMICOLON .

    CLASS           reduce using rule 4 (class -> CLASS TYPE_ID INHERITS TYPE_ID LBRACE feature_list RBRACE SEMICOLON .)
    $end            reduce using rule 4 (class -> CLASS TYPE_ID INHERITS TYPE_ID LBRACE feature_list RBRACE SEMICOLON .)


state 19

    (5) feature_list -> feature SEMICOLON feature_list .

    RBRACE          reduce using rule 5 (feature_list -> feature SEMICOLON feature_list .)


state 20

    (9) feature -> ID COLON TYPE_ID . LBRACKET ASSIGN expression RBRACKET

    LBRACKET        shift and go to state 25


state 21

    (8) feature -> ID LPAREN formal_list . RPAREN COLON TYPE_ID LBRACE expression RBRACE

    RPAREN          shift and go to state 26


state 22

    (12) formal_list -> empty .

    RPAREN          reduce using rule 12 (formal_list -> empty .)


state 23

    (13) formalParam -> ID . COLON TYPE_ID

    COLON           shift and go to state 27


state 24

    (10) formal_list -> formalParam . COMMA formal_list
    (11) formal_list -> formalParam .

    COMMA           shift and go to state 28
    RPAREN          reduce using rule 11 (formal_list -> formalParam .)


state 25

    (9) feature -> ID COLON TYPE_ID LBRACKET . ASSIGN expression RBRACKET

    ASSIGN          shift and go to state 29


state 26

    (8) feature -> ID LPAREN formal_list RPAREN . COLON TYPE_ID LBRACE expression RBRACE

    COLON           shift and go to state 30


state 27

    (13) formalParam -> ID COLON . TYPE_ID

    TYPE_ID         shift and go to state 31


state 28

    (10) formal_list -> formalParam COMMA . formal_list
    (10) formal_list -> . formalParam COMMA formal_list
    (11) formal_list -> . formalParam
    (12) formal_list -> . empty
    (13) formalParam -> . ID COLON TYPE_ID
    (51) empty -> .

    ID              shift and go to state 23
    RPAREN          reduce using rule 51 (empty -> .)

    formalParam                    shift and go to state 24
    formal_list                    shift and go to state 32
    empty                          shift and go to state 22

state 29

    (9) feature -> ID COLON TYPE_ID LBRACKET ASSIGN . expression RBRACKET
    (14) expression -> . ID ASSIGN expression
    (15) expression -> . expression DOT ID LPAREN expression_list RPAREN
    (16) expression -> . expression ALT expression DOT ID LPAREN expression_list RPAREN
    (20) expression -> . ID LPAREN expression expression_list RPAREN
    (21) expression -> . IF expression THEN expression ELSE expression FI
    (22) expression -> . WHILE expression LOOP expression POOL
    (23) expression -> . LBRACE expression SEMICOLON expression_list RBRACE
    (29) expression -> . LET expression_let_var_decl expression_let_var_decl_list IN expression
    (30) expression -> . CASE expression OF case_action case_action_list ESAC
    (35) expression -> . NEW TYPE_ID
    (36) expression -> . ISVOID expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULTIPLY expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression LESSTHAN expression
    (42) expression -> . expression LESSEQ expression
    (43) expression -> . expression EQUAL expression
    (44) expression -> . expression GREATERTHAN expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NOT expression
    (48) expression -> . INTEGER
    (49) expression -> . STRING
    (50) expression -> . BOOLEAN

    ID              shift and go to state 45
    IF              shift and go to state 42
    WHILE           shift and go to state 35
    LBRACE          shift and go to state 40
    LET             shift and go to state 38
    CASE            shift and go to state 41
    NEW             shift and go to state 36
    ISVOID          shift and go to state 33
    LPAREN          shift and go to state 34
    NOT             shift and go to state 43
    INTEGER         shift and go to state 46
    STRING          shift and go to state 44
    BOOLEAN         shift and go to state 37

    expression                     shift and go to state 39

state 30

    (8) feature -> ID LPAREN formal_list RPAREN COLON . TYPE_ID LBRACE expression RBRACE

    TYPE_ID         shift and go to state 47


state 31

    (13) formalParam -> ID COLON TYPE_ID .

    COMMA           reduce using rule 13 (formalParam -> ID COLON TYPE_ID .)
    RPAREN          reduce using rule 13 (formalParam -> ID COLON TYPE_ID .)


state 32

    (10) formal_list -> formalParam COMMA formal_list .

    RPAREN          reduce using rule 10 (formal_list -> formalParam COMMA formal_list .)


state 33

    (36) expression -> ISVOID . expression
    (14) expression -> . ID ASSIGN expression
    (15) expression -> . expression DOT ID LPAREN expression_list RPAREN
    (16) expression -> . expression ALT expression DOT ID LPAREN expression_list RPAREN
    (20) expression -> . ID LPAREN expression expression_list RPAREN
    (21) expression -> . IF expression THEN expression ELSE expression FI
    (22) expression -> . WHILE expression LOOP expression POOL
    (23) expression -> . LBRACE expression SEMICOLON expression_list RBRACE
    (29) expression -> . LET expression_let_var_decl expression_let_var_decl_list IN expression
    (30) expression -> . CASE expression OF case_action case_action_list ESAC
    (35) expression -> . NEW TYPE_ID
    (36) expression -> . ISVOID expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULTIPLY expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression LESSTHAN expression
    (42) expression -> . expression LESSEQ expression
    (43) expression -> . expression EQUAL expression
    (44) expression -> . expression GREATERTHAN expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NOT expression
    (48) expression -> . INTEGER
    (49) expression -> . STRING
    (50) expression -> . BOOLEAN

    ID              shift and go to state 45
    IF              shift and go to state 42
    WHILE           shift and go to state 35
    LBRACE          shift and go to state 40
    LET             shift and go to state 38
    CASE            shift and go to state 41
    NEW             shift and go to state 36
    ISVOID          shift and go to state 33
    LPAREN          shift and go to state 34
    NOT             shift and go to state 43
    INTEGER         shift and go to state 46
    STRING          shift and go to state 44
    BOOLEAN         shift and go to state 37

    expression                     shift and go to state 48

state 34

    (46) expression -> LPAREN . expression RPAREN
    (14) expression -> . ID ASSIGN expression
    (15) expression -> . expression DOT ID LPAREN expression_list RPAREN
    (16) expression -> . expression ALT expression DOT ID LPAREN expression_list RPAREN
    (20) expression -> . ID LPAREN expression expression_list RPAREN
    (21) expression -> . IF expression THEN expression ELSE expression FI
    (22) expression -> . WHILE expression LOOP expression POOL
    (23) expression -> . LBRACE expression SEMICOLON expression_list RBRACE
    (29) expression -> . LET expression_let_var_decl expression_let_var_decl_list IN expression
    (30) expression -> . CASE expression OF case_action case_action_list ESAC
    (35) expression -> . NEW TYPE_ID
    (36) expression -> . ISVOID expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULTIPLY expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression LESSTHAN expression
    (42) expression -> . expression LESSEQ expression
    (43) expression -> . expression EQUAL expression
    (44) expression -> . expression GREATERTHAN expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NOT expression
    (48) expression -> . INTEGER
    (49) expression -> . STRING
    (50) expression -> . BOOLEAN

    ID              shift and go to state 45
    IF              shift and go to state 42
    WHILE           shift and go to state 35
    LBRACE          shift and go to state 40
    LET             shift and go to state 38
    CASE            shift and go to state 41
    NEW             shift and go to state 36
    ISVOID          shift and go to state 33
    LPAREN          shift and go to state 34
    NOT             shift and go to state 43
    INTEGER         shift and go to state 46
    STRING          shift and go to state 44
    BOOLEAN         shift and go to state 37

    expression                     shift and go to state 49

state 35

    (22) expression -> WHILE . expression LOOP expression POOL
    (14) expression -> . ID ASSIGN expression
    (15) expression -> . expression DOT ID LPAREN expression_list RPAREN
    (16) expression -> . expression ALT expression DOT ID LPAREN expression_list RPAREN
    (20) expression -> . ID LPAREN expression expression_list RPAREN
    (21) expression -> . IF expression THEN expression ELSE expression FI
    (22) expression -> . WHILE expression LOOP expression POOL
    (23) expression -> . LBRACE expression SEMICOLON expression_list RBRACE
    (29) expression -> . LET expression_let_var_decl expression_let_var_decl_list IN expression
    (30) expression -> . CASE expression OF case_action case_action_list ESAC
    (35) expression -> . NEW TYPE_ID
    (36) expression -> . ISVOID expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULTIPLY expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression LESSTHAN expression
    (42) expression -> . expression LESSEQ expression
    (43) expression -> . expression EQUAL expression
    (44) expression -> . expression GREATERTHAN expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NOT expression
    (48) expression -> . INTEGER
    (49) expression -> . STRING
    (50) expression -> . BOOLEAN

    ID              shift and go to state 45
    IF              shift and go to state 42
    WHILE           shift and go to state 35
    LBRACE          shift and go to state 40
    LET             shift and go to state 38
    CASE            shift and go to state 41
    NEW             shift and go to state 36
    ISVOID          shift and go to state 33
    LPAREN          shift and go to state 34
    NOT             shift and go to state 43
    INTEGER         shift and go to state 46
    STRING          shift and go to state 44
    BOOLEAN         shift and go to state 37

    expression                     shift and go to state 50

state 36

    (35) expression -> NEW . TYPE_ID

    TYPE_ID         shift and go to state 51


state 37

    (50) expression -> BOOLEAN .

    DOT             reduce using rule 50 (expression -> BOOLEAN .)
    ALT             reduce using rule 50 (expression -> BOOLEAN .)
    PLUS            reduce using rule 50 (expression -> BOOLEAN .)
    MINUS           reduce using rule 50 (expression -> BOOLEAN .)
    MULTIPLY        reduce using rule 50 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 50 (expression -> BOOLEAN .)
    LESSTHAN        reduce using rule 50 (expression -> BOOLEAN .)
    LESSEQ          reduce using rule 50 (expression -> BOOLEAN .)
    EQUAL           reduce using rule 50 (expression -> BOOLEAN .)
    GREATERTHAN     reduce using rule 50 (expression -> BOOLEAN .)
    GREATEREQ       reduce using rule 50 (expression -> BOOLEAN .)
    RBRACKET        reduce using rule 50 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 50 (expression -> BOOLEAN .)
    LOOP            reduce using rule 50 (expression -> BOOLEAN .)
    SEMICOLON       reduce using rule 50 (expression -> BOOLEAN .)
    OF              reduce using rule 50 (expression -> BOOLEAN .)
    THEN            reduce using rule 50 (expression -> BOOLEAN .)
    ID              reduce using rule 50 (expression -> BOOLEAN .)
    IF              reduce using rule 50 (expression -> BOOLEAN .)
    WHILE           reduce using rule 50 (expression -> BOOLEAN .)
    LBRACE          reduce using rule 50 (expression -> BOOLEAN .)
    LET             reduce using rule 50 (expression -> BOOLEAN .)
    CASE            reduce using rule 50 (expression -> BOOLEAN .)
    NEW             reduce using rule 50 (expression -> BOOLEAN .)
    ISVOID          reduce using rule 50 (expression -> BOOLEAN .)
    LPAREN          reduce using rule 50 (expression -> BOOLEAN .)
    NOT             reduce using rule 50 (expression -> BOOLEAN .)
    INTEGER         reduce using rule 50 (expression -> BOOLEAN .)
    STRING          reduce using rule 50 (expression -> BOOLEAN .)
    BOOLEAN         reduce using rule 50 (expression -> BOOLEAN .)
    RBRACE          reduce using rule 50 (expression -> BOOLEAN .)
    POOL            reduce using rule 50 (expression -> BOOLEAN .)
    COMMA           reduce using rule 50 (expression -> BOOLEAN .)
    ELSE            reduce using rule 50 (expression -> BOOLEAN .)
    IN              reduce using rule 50 (expression -> BOOLEAN .)
    FI              reduce using rule 50 (expression -> BOOLEAN .)


state 38

    (29) expression -> LET . expression_let_var_decl expression_let_var_decl_list IN expression
    (27) expression_let_var_decl -> . ID COLON TYPE_ID ASSIGN expression
    (28) expression_let_var_decl -> . ID COLON TYPE_ID

    ID              shift and go to state 52

    expression_let_var_decl        shift and go to state 53

state 39

    (9) feature -> ID COLON TYPE_ID LBRACKET ASSIGN expression . RBRACKET
    (15) expression -> expression . DOT ID LPAREN expression_list RPAREN
    (16) expression -> expression . ALT expression DOT ID LPAREN expression_list RPAREN
    (37) expression -> expression . PLUS expression
    (38) expression -> expression . MINUS expression
    (39) expression -> expression . MULTIPLY expression
    (40) expression -> expression . DIVIDE expression
    (41) expression -> expression . LESSTHAN expression
    (42) expression -> expression . LESSEQ expression
    (43) expression -> expression . EQUAL expression
    (44) expression -> expression . GREATERTHAN expression
    (45) expression -> expression . GREATEREQ expression

    RBRACKET        shift and go to state 54
    DOT             shift and go to state 64
    ALT             shift and go to state 62
    PLUS            shift and go to state 56
    MINUS           shift and go to state 65
    MULTIPLY        shift and go to state 63
    DIVIDE          shift and go to state 60
    LESSTHAN        shift and go to state 59
    LESSEQ          shift and go to state 58
    EQUAL           shift and go to state 57
    GREATERTHAN     shift and go to state 61
    GREATEREQ       shift and go to state 55


state 40

    (23) expression -> LBRACE . expression SEMICOLON expression_list RBRACE
    (14) expression -> . ID ASSIGN expression
    (15) expression -> . expression DOT ID LPAREN expression_list RPAREN
    (16) expression -> . expression ALT expression DOT ID LPAREN expression_list RPAREN
    (20) expression -> . ID LPAREN expression expression_list RPAREN
    (21) expression -> . IF expression THEN expression ELSE expression FI
    (22) expression -> . WHILE expression LOOP expression POOL
    (23) expression -> . LBRACE expression SEMICOLON expression_list RBRACE
    (29) expression -> . LET expression_let_var_decl expression_let_var_decl_list IN expression
    (30) expression -> . CASE expression OF case_action case_action_list ESAC
    (35) expression -> . NEW TYPE_ID
    (36) expression -> . ISVOID expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULTIPLY expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression LESSTHAN expression
    (42) expression -> . expression LESSEQ expression
    (43) expression -> . expression EQUAL expression
    (44) expression -> . expression GREATERTHAN expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NOT expression
    (48) expression -> . INTEGER
    (49) expression -> . STRING
    (50) expression -> . BOOLEAN

    ID              shift and go to state 45
    IF              shift and go to state 42
    WHILE           shift and go to state 35
    LBRACE          shift and go to state 40
    LET             shift and go to state 38
    CASE            shift and go to state 41
    NEW             shift and go to state 36
    ISVOID          shift and go to state 33
    LPAREN          shift and go to state 34
    NOT             shift and go to state 43
    INTEGER         shift and go to state 46
    STRING          shift and go to state 44
    BOOLEAN         shift and go to state 37

    expression                     shift and go to state 66

state 41

    (30) expression -> CASE . expression OF case_action case_action_list ESAC
    (14) expression -> . ID ASSIGN expression
    (15) expression -> . expression DOT ID LPAREN expression_list RPAREN
    (16) expression -> . expression ALT expression DOT ID LPAREN expression_list RPAREN
    (20) expression -> . ID LPAREN expression expression_list RPAREN
    (21) expression -> . IF expression THEN expression ELSE expression FI
    (22) expression -> . WHILE expression LOOP expression POOL
    (23) expression -> . LBRACE expression SEMICOLON expression_list RBRACE
    (29) expression -> . LET expression_let_var_decl expression_let_var_decl_list IN expression
    (30) expression -> . CASE expression OF case_action case_action_list ESAC
    (35) expression -> . NEW TYPE_ID
    (36) expression -> . ISVOID expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULTIPLY expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression LESSTHAN expression
    (42) expression -> . expression LESSEQ expression
    (43) expression -> . expression EQUAL expression
    (44) expression -> . expression GREATERTHAN expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NOT expression
    (48) expression -> . INTEGER
    (49) expression -> . STRING
    (50) expression -> . BOOLEAN

    ID              shift and go to state 45
    IF              shift and go to state 42
    WHILE           shift and go to state 35
    LBRACE          shift and go to state 40
    LET             shift and go to state 38
    CASE            shift and go to state 41
    NEW             shift and go to state 36
    ISVOID          shift and go to state 33
    LPAREN          shift and go to state 34
    NOT             shift and go to state 43
    INTEGER         shift and go to state 46
    STRING          shift and go to state 44
    BOOLEAN         shift and go to state 37

    expression                     shift and go to state 67

state 42

    (21) expression -> IF . expression THEN expression ELSE expression FI
    (14) expression -> . ID ASSIGN expression
    (15) expression -> . expression DOT ID LPAREN expression_list RPAREN
    (16) expression -> . expression ALT expression DOT ID LPAREN expression_list RPAREN
    (20) expression -> . ID LPAREN expression expression_list RPAREN
    (21) expression -> . IF expression THEN expression ELSE expression FI
    (22) expression -> . WHILE expression LOOP expression POOL
    (23) expression -> . LBRACE expression SEMICOLON expression_list RBRACE
    (29) expression -> . LET expression_let_var_decl expression_let_var_decl_list IN expression
    (30) expression -> . CASE expression OF case_action case_action_list ESAC
    (35) expression -> . NEW TYPE_ID
    (36) expression -> . ISVOID expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULTIPLY expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression LESSTHAN expression
    (42) expression -> . expression LESSEQ expression
    (43) expression -> . expression EQUAL expression
    (44) expression -> . expression GREATERTHAN expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NOT expression
    (48) expression -> . INTEGER
    (49) expression -> . STRING
    (50) expression -> . BOOLEAN

    ID              shift and go to state 45
    IF              shift and go to state 42
    WHILE           shift and go to state 35
    LBRACE          shift and go to state 40
    LET             shift and go to state 38
    CASE            shift and go to state 41
    NEW             shift and go to state 36
    ISVOID          shift and go to state 33
    LPAREN          shift and go to state 34
    NOT             shift and go to state 43
    INTEGER         shift and go to state 46
    STRING          shift and go to state 44
    BOOLEAN         shift and go to state 37

    expression                     shift and go to state 68

state 43

    (47) expression -> NOT . expression
    (14) expression -> . ID ASSIGN expression
    (15) expression -> . expression DOT ID LPAREN expression_list RPAREN
    (16) expression -> . expression ALT expression DOT ID LPAREN expression_list RPAREN
    (20) expression -> . ID LPAREN expression expression_list RPAREN
    (21) expression -> . IF expression THEN expression ELSE expression FI
    (22) expression -> . WHILE expression LOOP expression POOL
    (23) expression -> . LBRACE expression SEMICOLON expression_list RBRACE
    (29) expression -> . LET expression_let_var_decl expression_let_var_decl_list IN expression
    (30) expression -> . CASE expression OF case_action case_action_list ESAC
    (35) expression -> . NEW TYPE_ID
    (36) expression -> . ISVOID expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULTIPLY expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression LESSTHAN expression
    (42) expression -> . expression LESSEQ expression
    (43) expression -> . expression EQUAL expression
    (44) expression -> . expression GREATERTHAN expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NOT expression
    (48) expression -> . INTEGER
    (49) expression -> . STRING
    (50) expression -> . BOOLEAN

    ID              shift and go to state 45
    IF              shift and go to state 42
    WHILE           shift and go to state 35
    LBRACE          shift and go to state 40
    LET             shift and go to state 38
    CASE            shift and go to state 41
    NEW             shift and go to state 36
    ISVOID          shift and go to state 33
    LPAREN          shift and go to state 34
    NOT             shift and go to state 43
    INTEGER         shift and go to state 46
    STRING          shift and go to state 44
    BOOLEAN         shift and go to state 37

    expression                     shift and go to state 69

state 44

    (49) expression -> STRING .

    DOT             reduce using rule 49 (expression -> STRING .)
    ALT             reduce using rule 49 (expression -> STRING .)
    PLUS            reduce using rule 49 (expression -> STRING .)
    MINUS           reduce using rule 49 (expression -> STRING .)
    MULTIPLY        reduce using rule 49 (expression -> STRING .)
    DIVIDE          reduce using rule 49 (expression -> STRING .)
    LESSTHAN        reduce using rule 49 (expression -> STRING .)
    LESSEQ          reduce using rule 49 (expression -> STRING .)
    EQUAL           reduce using rule 49 (expression -> STRING .)
    GREATERTHAN     reduce using rule 49 (expression -> STRING .)
    GREATEREQ       reduce using rule 49 (expression -> STRING .)
    RBRACKET        reduce using rule 49 (expression -> STRING .)
    RPAREN          reduce using rule 49 (expression -> STRING .)
    LOOP            reduce using rule 49 (expression -> STRING .)
    SEMICOLON       reduce using rule 49 (expression -> STRING .)
    OF              reduce using rule 49 (expression -> STRING .)
    THEN            reduce using rule 49 (expression -> STRING .)
    ID              reduce using rule 49 (expression -> STRING .)
    IF              reduce using rule 49 (expression -> STRING .)
    WHILE           reduce using rule 49 (expression -> STRING .)
    LBRACE          reduce using rule 49 (expression -> STRING .)
    LET             reduce using rule 49 (expression -> STRING .)
    CASE            reduce using rule 49 (expression -> STRING .)
    NEW             reduce using rule 49 (expression -> STRING .)
    ISVOID          reduce using rule 49 (expression -> STRING .)
    LPAREN          reduce using rule 49 (expression -> STRING .)
    NOT             reduce using rule 49 (expression -> STRING .)
    INTEGER         reduce using rule 49 (expression -> STRING .)
    STRING          reduce using rule 49 (expression -> STRING .)
    BOOLEAN         reduce using rule 49 (expression -> STRING .)
    RBRACE          reduce using rule 49 (expression -> STRING .)
    POOL            reduce using rule 49 (expression -> STRING .)
    COMMA           reduce using rule 49 (expression -> STRING .)
    ELSE            reduce using rule 49 (expression -> STRING .)
    IN              reduce using rule 49 (expression -> STRING .)
    FI              reduce using rule 49 (expression -> STRING .)


state 45

    (14) expression -> ID . ASSIGN expression
    (20) expression -> ID . LPAREN expression expression_list RPAREN

    ASSIGN          shift and go to state 71
    LPAREN          shift and go to state 70


state 46

    (48) expression -> INTEGER .
